--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-body
-{
+body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,23 +6,23 @@ body
     background-size: cover;
     background-position: center;
 }
-.sign-up-form
-{
+
+.sign-up-form {
     width: 300px;
-    box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
-    background: rgba(255,255,255);
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+    background: rgba(255, 255, 255);
     padding: 20px;
     margin: 8% auto 0;
     text-align: center;
-    box-shadow: 10px 10px 5px rgba(0,0,0,0.3);
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
 }
-.sign-up-form h1 
-{
+
+.sign-up-form h1 {
     color: #1C8ADB;
     margin-bottom: 30px;
 }
-.input-box
-{
+
+.input-box {
     border-radius: 20px;
     padding: 10px;
     margin: 10px 0;
@@ -31,8 +30,8 @@ body
     border: 1px solid #999;
     outline: none;
 }
-button
-{
+
+button {
     color: #FFF;
     width: 100%;
     padding: 10px;
@@ -43,43 +42,47 @@ button
     outline: none;
     cursor: pointer;
 }
-.signup-btn
-{
+
+.signup-btn {
     background-color: #1c8adb;
 }
-.twitter-btn
-{
+
+.twitter-btn {
     background-color: #21afde;
 }
-a
-{
+
+a {
     text-decoration: none;
 }
-hr
-{
+
+hr {
     margin-top: 20px;
     width: 80%;
 }
-.or
-{
+
+.or {
     background: #fff;
     width: 36px;
     margin: -21px auto 10px;
 }
-img
-{
+
+img {
     width: 70px;
     margin-top: -50px;
 }
-#checkbox-span
-{
+
+#checkbox-span {
     position: relative;
     top: 2px;
 }
-#email-box
-{
+
+#email-box {
     position: relative;
     left: -74px;
     color: red;
     font-size: 14px;
+}
+
+.input-box:focus {
+    border-color: #000;
 }
