--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,27 @@ hr {
     font-size: 12px;
 }
 
+#saveUsername{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    position: relative;
+    left:-90px;
+}
+
+#autoLogin{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    position: relative;
+    left: 90px;
+    top: -17px;
+}
+
+#autoText{
+    position: relative;
+    top: -3px;
+}
+
+#saveText{
+    position: relative;
+    top: -3px;
+}
