--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,23 +1,28 @@
-#Carousel{
+#Carousel {
     position: relative;
-    width:800px;
-    height:600px;
+    width: 800px;
+    height: 600px;
+    z-index: 10;
 }
-#c_img{
+
+#c_img {
     position: relative;
 }
-.lb{
+
+.lb {
     opacity: 0;
     position: absolute;
     transition: opacity 1s;
 }
-#c_button{
+
+#c_button {
     position: relative;
     left: 860px;
     top: 550px;
     z-index: 100;
 }
-.ra1{
+
+.ra1 {
     width: 10px;
     height: 10px;
     border: 1px solid gray;
@@ -27,8 +32,9 @@
     position: relative;
     top: -15px;
 }
-.ra2{
-    background-color:#696969;
+
+.ra2 {
+    background-color: #696969;
     width: 10px;
     height: 10px;
     border: 3px solid rgb(180, 180, 180);
@@ -38,13 +44,16 @@
     position: relative;
     top: -17px;
 }
-#Carousel_img{
+
+#Carousel_img {
     opacity: 1;
 }
-#r1:hover #lunbotu{
+
+#r1:hover #lunbotu {
     opacity: 1;
 }
-#lb_a1{
+
+#lb_a1 {
     display: block;
     width: 1240px;
     height: 547px;
