--- a/css/commodity_unit.css
+++ b/css/commodity_unit.css
@@ -1,29 +1,41 @@
-#commodity_1{
-    width: 1200px;
+#commodity_1 {
+    width: 1100px;
     height: auto;
     display: flex;
     flex-wrap: nowrap;
     margin-left: 19%;
-    background:rgb(231, 229, 229);
+    background: rgb(231, 229, 229);
+    padding: 5px 43px 5px 43px;
 }
-.commodity_unit{
-    width: 200px;;
+
+.commodity_unit {
+    width: 200px;
     height: 300px;
     background: rgb(241, 240, 239);
-    padding: 10px;
-    margin: 10px;
+    margin: 10px 10px 10px 10px;
+    transition: all 0.5s;
+    border-left: white;
 }
-.commodity_img{
+
+.commodity_unit:hover {
+    transform: scale(1.1);
+    border: 3px solid red;
+}
+
+.commodity_img {
     width: 200px;
     height: 230px;
 }
-.commodity_text{
+
+.commodity_text {
     font-size: 18px;
 }
-.commodity_text2{
+
+.commodity_text2 {
     font-size: 14px;
 }
-.commodity_price{
+
+.commodity_price {
     text-align: end;
     color: tomato;
 }
