--- a/css/commodity_unit.css
+++ b/css/commodity_unit.css
@@ -1,9 +1,10 @@
 #commodity_1 {
     width: 1100px;
-    height: auto;
+    height: 320px;
     display: flex;
     flex-wrap: nowrap;
     margin-left: 19%;
+    margin-bottom: 20px;
     background: rgb(231, 229, 229);
     padding: 5px 43px 5px 43px;
 }
@@ -18,7 +19,7 @@
 }
 
 .commodity_unit:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
     border: 3px solid red;
 }
 
