--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,9 @@ body {
     -webkit-user-select: none;
     overflow-x: hidden;
     -webkit-font-smoothing;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 header {
@@ -53,7 +56,7 @@ nav {
     transition: all 0.7s;
 }
 
-.nav_text{
+.nav_text {
     height: 40px;
 }
 
@@ -125,3 +128,4 @@ h1 {
     display: flex;
     justify-content: center;
 }
+
