添加侧栏回到顶部  header动画

--- a/css/commodity_unit.css
+++ b/css/commodity_unit.css
@@ -40,3 +40,9 @@
     text-align: end;
     color: tomato;
 }
+
+#commodity_rmtj{
+    position: relative;
+    margin-top: 50px;
+    line-height: 80px;
+}
