--- a/css/index.css
+++ b/css/index.css
@@ -9,13 +9,12 @@ body {
 }
 
 header {
-    position: relative;
+    position: fixed;
     width: 100%;
     background: rgba(0, 0, 0, 0.9);
     color: #F0F8FF;
     font-family: 黑体;
     z-index: 100;
-    float: left;
 }
 
 a {
@@ -41,7 +40,7 @@ aside {
     border: 1px solid red;
     position: fixed;
     left: 320px;
-    top: 300px;
+    top: 280px;
     white-space: normal;
     z-index: 100;
     font-size: 14px;
@@ -54,7 +53,25 @@ aside {
     transition: background 0.2s;
 }
 
+.side:after{
+    content: "";
+    clear: both;
+    position: relative;
+    display: block;
+    left: 7px;
+    top: 13px;
+    background: red;
+    width: 25px;
+    height: 2px;
+    border-radius: 1px;
+}
+
 .side:hover {
+    background: rgba(255, 127, 80, 0.5);
+    font-weight: bolder;
+}
+
+#move_top:hover {
     background: rgba(255, 127, 80, 0.5);
     font-weight: bolder;
 }
@@ -65,12 +82,36 @@ aside {
 }
 
 h1 {
+    w
     color: red;
     display: flex;
     justify-content: center;
 }
 
-#move_top{
-    line-height: 40px;
+#move_top {
+    text-align: center;
+    line-height: 20px;
     display: none;
+    height: 50px;
+}
+
+#arrows{
+    width: 15px;
+    height:15px;
+    border-width: 1px 0 0 1px;
+    border-color: red;
+    border-style: solid;
+    position: relative;
+    left: 12px;
+    top: 10px;
+    transform: rotate(45deg);
+}
+
+.aside_a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: -22px;
+    line-height: 55px;
 }
