--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@ header {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 #top {
@@ -74,6 +75,7 @@ aside {
 #move_top:hover {
     background: rgba(255, 127, 80, 0.5);
     font-weight: bolder;
+    color: black;
 }
 
 .side_text {
