--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,16 @@ hr {
 
 #loading {
     position: relative;
-    top: -100px;
+    top: 100px;
     z-index: 1000;
+}
+
+#cover{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 99;
     display: none;
 }
