--- a/css/style.css
+++ b/css/style.css
@@ -157,3 +157,23 @@ hr {
     z-index: 99;
     display: none;
 }
+
+#alert{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 60px;
+}
+
+#alert_text{
+    width: 200px;
+    height: 50px;
+    display: flex;
+    background-color: pink;
+    opacity: 0.7;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 50px;
+    color: red;
+    display: none;
+}
