--- a/css/index.css
+++ b/css/index.css
@@ -1,118 +1,155 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 宋体;
-    -webkit-user-select: none;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: 宋体;
+  -webkit-user-select: none;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
-    position: fixed;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.9);
-    color: #F0F8FF;
-    font-family: 黑体;
-    z-index: 100;
+  position: fixed;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  color: #F0F8FF;
+  font-family: 黑体;
+  z-index: 100;
+}
+
+.actionBar {
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-left: 5px;
+  line-height: 50px;
+  font-size: 19px;
+  width: 50px;
+  height: 50px;
+  border: 0px;
+  position: relative;
+}
+
+.actionBar:hover {
+  background-color: blueviolet;
+  cursor: pointer;
+}
+
+.actionNum {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  background-color: red;
+  bottom: 2px;
+  right: 0;
+  color: white;
+  line-height: 16px;
+  font-size: 14px;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 #top {
-    position: relative;
-    left: 70%;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  left: 70%;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
 }
 
 #top a {
-    margin-left: 20px;
-    color: #F0F8FF;
+  margin-left: 20px;
+  color: #F0F8FF;
 }
 
 aside {
-    width: 40px;
-    height: auto;
-    border: 1px solid red;
-    position: fixed;
-    left: 320px;
-    top: 200px;
-    white-space: normal;
-    z-index: 100;
-    font-size: 14px;
+  width: 40px;
+  height: auto;
+  border: 1px solid red;
+  position: fixed;
+  left: 320px;
+  top: 200px;
+  white-space: normal;
+  z-index: 100;
+  font-size: 14px;
 }
 
 .side {
-    width: 40px;
-    height: 50px;
-    text-align: center;
-    transition: background 0.2s;
+  width: 40px;
+  height: 50px;
+  text-align: center;
+  transition: background 0.2s;
 }
 
-.side:after{
-    content: "";
-    clear: both;
-    position: relative;
-    display: block;
-    left: 7px;
-    top: 13px;
-    background: red;
-    width: 25px;
-    height: 2px;
-    border-radius: 1px;
+.side:after {
+  content: "";
+  clear: both;
+  position: relative;
+  display: block;
+  left: 7px;
+  top: 13px;
+  background: red;
+  width: 25px;
+  height: 2px;
+  border-radius: 1px;
 }
 
 .side:hover {
-    background: rgba(255, 127, 80, 0.5);
-    font-weight: bolder;
+  background: rgba(255, 127, 80, 0.5);
+  font-weight: bolder;
 }
 
 #move_top:hover {
-    background: rgba(255, 127, 80, 0.5);
-    font-weight: bolder;
-    color: black;
+  background: rgba(255, 127, 80, 0.5);
+  font-weight: bolder;
+  color: black;
 }
 
 .side_text {
-    position: relative;
-    top: 8px;
+  position: relative;
+  top: 8px;
 }
 
 h1 {
-    color: red;
-    display: flex;
-    justify-content: center;
+  color: red;
+  display: flex;
+  justify-content: center;
 }
 
 #move_top {
-    text-align: center;
-    line-height: 20px;
-    display: none;
-    height: 50px;
+  text-align: center;
+  line-height: 20px;
+  display: none;
+  height: 50px;
 }
 
-#arrows{
-    width: 15px;
-    height:15px;
-    border-width: 1px 0 0 1px;
-    border-color: red;
-    border-style: solid;
-    position: relative;
-    left: 12px;
-    top: 10px;
-    transform: rotate(45deg);
+#arrows {
+  width: 15px;
+  height: 15px;
+  border-width: 1px 0 0 1px;
+  border-color: red;
+  border-style: solid;
+  position: relative;
+  left: 12px;
+  top: 10px;
+  transform: rotate(45deg);
 }
 
-.aside_a{
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: -22px;
-    line-height: 55px;
+.aside_a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: -22px;
+  line-height: 55px;
 }
