--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@ aside {
   height: auto;
   border: 1px solid red;
   position: fixed;
-  left: 320px;
+  left: 10%;
   top: 200px;
   white-space: normal;
   z-index: 100;
@@ -97,7 +97,7 @@ aside {
   position: relative;
   display: block;
   left: 7px;
-  top: 13px;
+  top: 5px;
   background: red;
   width: 25px;
   height: 2px;
@@ -113,11 +113,15 @@ aside {
   background: rgba(255, 127, 80, 0.5);
   font-weight: bolder;
   color: black;
+  cursor: pointer;
 }
 
 .side_text {
   position: relative;
-  top: 8px;
+}
+
+.side_text:last-child{
+  top: 5px;
 }
 
 h1 {
